Contrast Issues

--- a/techdegree/proj8/css/survey.css
+++ b/techdegree/proj8/css/survey.css
@@ -6,6 +6,10 @@
 	width: 60%;
 	padding: 10px;
 }
+label,
+legend {
+	color: #f2f2f2;
+}
 .container {
 	text-align: center;
 }
@@ -20,7 +24,6 @@
 *******************/
 legend {
 	margin-bottom: 7px;
-	color: #f2f2f2;
 }
 .legend {
 	position: absolute;
